<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:divider="@color/b_color_red"
    android:background="@drawable/y_push_bg"
    android:paddingTop="26dip"
    android:orientation="vertical"
    android:id="@+id/popLinearLayout"
    android:layout_width="155dip" android:layout_height="wrap_content">

    <TextView

        style="@style/b_homepage_pop_item"
        android:text="@string/b_add_friends"
        android:drawableLeft="@drawable/y_add_friends" />
    <TextView
        style="@style/b_homepage_pop_line" />
    <TextView
        android:text="@string/b_own_info"
        style="@style/b_homepage_pop_item"
        android:drawableLeft="@drawable/y_own_first" />
    <TextView
        style="@style/b_homepage_pop_line" />
    <TextView
        style="@style/b_homepage_pop_item"
        android:text="@string/b_feedback"
        android:drawableLeft="@drawable/y_add_label" />
</LinearLayout>
