<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/match_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            style="@style/wrap_content"
            android:textSize="30dp"
            android:textStyle="bold"
            android:text="@string/y_first_center"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="@dimen/y_activity_home_with_invite_code_main_height"
        android:orientation="vertical">

        <Button
            android:onClick="onClickZhuMa"
            style="@style/b_button_color_red"
            android:layout_marginTop="@dimen/y_activity_home_with_invite_code_1_height"
            android:text="@string/y_first_yaoqingzhucema" />

        <LinearLayout
            android:layout_marginTop="@dimen/y_activity_home_with_invite_code_2_height"
            android:layout_gravity="center"
            android:orientation="horizontal"
            style="@style/wrap_content">
            <TextView
                style="@style/wrap_content"
                android:textColor="@color/b_font_black"

                android:textSize="13dp"
                android:text="@string/y_first_haveId"/>
            <TextView
                android:id="@+id/load"
                style="@style/wrap_content"
                android:text="@string/y_first_load"
                android:textSize="13dp"
                android:textStyle="normal"
                android:textColor="@color/y_firstview_zhijiedenglu_color"/>
        </LinearLayout>

    </LinearLayout>
   </LinearLayout>