<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">

    <include layout="@layout/activity_view_top"/>
    <TextView
        android:background="@color/y_inivite_code_pass"
        android:layout_width="match_parent"
        android:layout_height="1dip" />
    <EditText
        android:id="@+id/codeEditText"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_activity_invite_code_2_height"
        android:inputType="number"
        android:ems="10"
        android:background="@color/white"
        android:hint="@string/y_input_inivie_code"
        android:layout_marginTop="@dimen/y_activity_invite_code_1_height"
        android:layout_gravity="center_vertical" >
        <requestFocus/>
    </EditText>
    <TextView
        android:background="@color/y_inivite_code_pass"
        android:layout_width="match_parent"
        android:layout_height="1dip" />
    <Button

        android:text="@string/y_tijiao"
        style="@style/b_button_color_red"
        android:layout_marginTop="@dimen/y_activity_invite_code_3_height"

        android:onClick="onClickSendCode"
        android:id="@+id/button2" />

    <TextView
        android:layout_width="@dimen/y_activity_invite_code_2_width"
        android:layout_height="1dip"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/y_activity_invite_code_4_height"
        android:background="@drawable/x_xuxian_bg_repaint"/>

    <TextView
        style="@style/wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:layout_gravity="center"
        android:textColor="@color/y_inivite_code_pass_font"
        android:textSize="15dp"
        android:layout_marginTop="@dimen/y_activity_invite_code_6_height"
        android:text="@string/y_input_invie_code_photoshuo"/>

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/y_activity_invite_code_7_height"
        android:layout_width="@dimen/y_activity_invite_code_3_width"
        android:visibility="gone"
        android:layout_height="@dimen/y_activity_invite_code_8_height">

        <ImageButton
            style="@style/match_content"
            android:src="@drawable/y_morentouxiang"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/y_activity_invite_code_9_height"
            android:gravity="center"
            android:textSize="12dp"
            android:textColor="@color/white"
            android:alpha="0.5"
            android:background="@color/black"
            android:text="@string/y_shenghezhong"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <Button
        android:layout_width="@dimen/y_activity_invite_code_4_width"
        android:layout_height="@dimen/y_activity_invite_code_11_height"
        style="@style/b_button_color_red"
        android:text="@string/y_tijiao"
        android:visibility="gone"
        android:onClick="onClickSendPhoto"
        android:layout_marginTop="@dimen/y_activity_invite_code_9_height"
        android:layout_gravity="center"/>



</LinearLayout>
